new exercises, changed folder names, and updated files